# galerians-autosplitter

./: .gitignore  Cargo.toml  README.md
assets/: Galerians - Any% - Key Events.lss
assets/backgrounds/: bg_map.json
assets/splits/: Galerians - Any% - Console.lss  Galerians - Any% - Doors.lss  Galerians - Replay Mode - Console.lss  Galerians - Replay Mode - Doors.lss  Galerians - Replay Mode - Key Events.lss
scripts/: generate_bg_map.py  share_capture.sh
src/: autosplitter.rs  game.rs  image.rs  lss.rs  main.rs  platform.rs  shmem.rs  split.rs  splits.rs
src/game/: console.rs  emulator.rs
src/shmem/: unix.rs  windows.rs
