[package]
name = "galerians-autosplitter"
version = "1.0.0"
authors = ["descawed <github@descawed.com>"]
edition = "2024"
description = "A LiveSplit-compatible autosplitter for speedrunning Galerians in supported emulators"
readme = "README.md"
repository = "https://github.com/descawed/galerians-autosplitter"

[dependencies]
anyhow = "1.0.99"
clap = { version = "4.5.45", features = ["derive"] }
colog = "1.3.0"
log = "0.4.27"
num-traits = "0.2.19"
sysinfo = "0.37.0"

[target.'cfg(unix)'.dependencies]
libc = "0.2.175"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61.3", features = ["Win32_System_Memory"] }