[package]
name = "galerians-autosplitter"
version = "2.0.0"
authors = ["descawed <github@descawed.com>"]
edition = "2024"
description = "A LiveSplit-compatible autosplitter for speedrunning Galerians"
readme = "README.md"
repository = "https://github.com/descawed/galerians-autosplitter"

[dependencies]
anyhow = "1.0.99"
clap = { version = "4.5.47", features = ["derive"] }
colog = "1.4.0"
log = "0.4.28"
num-traits = "0.2.19"
# need to install libclang-cpp-dev and libopencv-dev
opencv = { version = "0.95.1", features = ["clang-runtime"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
serde_repr = "0.1.20"
sysinfo = "0.37.0"

[target.'cfg(unix)'.dependencies]
libc = "0.2.175"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.0", features = ["Win32_System_Memory"] }