[package]
name = "galerians-autosplitter"
version = "2.1.1"
authors = ["descawed <github@descawed.com>"]
edition = "2024"
description = "A LiveSplit-compatible autosplitter for speedrunning Galerians"
readme = "README.md"
repository = "https://github.com/descawed/galerians-autosplitter"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
colog = "1.4.0"
log = "0.4.30"
num-traits = "0.2.19"
# need to install libclang-cpp-dev and libopencv-dev
opencv = { version = "0.98.2", features = ["clang-runtime"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_repr = "0.1.20"
sysinfo = "0.39.3"

[target.'cfg(unix)'.dependencies]
libc = "0.2.186"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = ["Win32_System_Memory"] }